# nostdx

./: CMakeLists.txt  README.md
include/nostdx/: functional.hpp  propagate_const.hpp  span.hpp  type_traits.hpp
test/: propagate_const.cpp
